--- a/Practice/Program 5_Student-1104526_陳品佑.ipynb
+++ b/Practice/Program 5_Student-1104526_陳品佑.ipynb
@@ -421,7 +421,7 @@
     "        print(s[id])\n",
     "def modify(s):\n",
     "    id=input(\"Enter a student id to be modified:\")\n",
-    "    if id mot in s:\n",
+    "    if id not in s:\n",
     "        print(\"this id dosen't exist!\")\n",
     "    else:\n",
     "        grade=int(input(\"Enter a student grade to modify:\"))\n",
