--- a/Practice/Program 5_Student-1104526_陳品佑.ipynb
+++ b/Practice/Program 5_Student-1104526_陳品佑.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
      "output_type": "stream",
      "text": [
       "9\n",
-      "4\n"
+      "c\n"
      ]
     }
    ],
@@ -106,15 +106,16 @@
     "    returns: The key with the smallest number of values associated with it\n",
     "    '''\n",
     "    # Your Code Here\n",
-    "    test=[]\n",
+    "    k=list(animals.keys())\n",
+    "    v=list(animals.values())\n",
     "    c=0\n",
-    "    for u in aDict:\n",
-    "        test.append(aDict[u])\n",
-    "        if len(test)>c:\n",
-    "            c=len(test)\n",
-    "    return c\n",
-    "print(bigest(animals))\n",
-    "    "
+    "    b=\"\"\n",
+    "    for x in range(0,len(k)):\n",
+    "        if len(v[x])>c:\n",
+    "            c=len(v[x])\n",
+    "            b=k[x]\n",
+    "    return b\n",
+    "print(bigest(animals))"
    ]
   },
   {
